# zegar-grafika-komputerowa

./: CMakeLists.txt  README.md
assets/wooden_clock/: scene.gltf
src/: main.cpp  model_loader.h
src/glad/include/: glad.c
src/glad/include/glad/: glad.h
